pass spell casting parameters to client such that it can reconstruct the spell when blending data is not known
this is important when a player is tracked in the middle of a spell, since the blending data is not available from the previous state.